--- a/chapter.tex
+++ b/chapter.tex
@@ -11,3 +11,17 @@
 \input{./code/p9}
 \input{./code/p10}
 \input{./code/p11}
+\section{插值}
+\input{./code/p12}
+\input{./code/p13}
+\input{./code/p14}
+\input{./code/p15}
+\input{./code/p16}
+\section{矩阵计算}
+\input{./code/p17}
+\input{./code/p18}
+\input{./code/p19}
+\input{./code/p20}
+\input{./code/p21}
+\input{./code/p22}
+\input{./code/p23}
